[tool.poetry]
name = "exp_image_processing"
version = "0.1.0"
description = ""
authors = ["Masaya Abe <49779079+masaya0226@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9.15"
Pillow = "^9.1.1"
pyzbar = "^0.1.9"
PyExifTool = "^0.5.3"
click = "^8.1.3"
opencv-python = "^4.6.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
rembg = "^2.0.25"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
